spes: rootdir: Set screen-off schedutil ratelimits Use a more power-friendly rate limit configuration (2ms up/down) to reduce power consumption a bit when the screen is off. This requires the counterpart change in kernel.
Power results during screen off GPS usage, measured by
Alex Naidis <alex.naidis@paranoidandroid.co> on SDM845:

Before:
392mW
93.5mA

After:
378.5mW
90.2mA

Co-authored-by: Alex Naidis <alex.naidis@paranoidandroid.co>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -117,9 +117,13 @@ on boot
 
     # Governor settings
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/down_rate_limit_us_screen_off 2000
     write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_freq 1516000
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/up_rate_limit_us_screen_off 2000
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/down_rate_limit_us_screen_off 2000
     write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_freq 1344000
+    write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/up_rate_limit_us_screen_off 2000
     write /sys/module/cpu_boost/parameters/input_boost_freq "0:1344000"
     write /sys/module/cpu_boost/parameters/input_boost_ms 120
 
